Added starter code with references to Randys code from the demos. Thank you Randy

--- a/index.html
+++ b/index.html
@@ -12,19 +12,64 @@
 
 <body>
 
+    <header>
+        <h1>
+            Conect Four Team Project
+        </h1>
+    </header>
+
+    <main id="gameArea">
+
+        <div id="messageArea"></div>
+
+        <section id="board">
+
+            <div class="col" id="col0">
+                <!-- Start with some discs -->
+                <div class="disc red"></div>
+                <div class="disc black"></div>
+                <div class="disc red"></div>
+            </div>
+
+            <div class="col" id="col1">
+                <!-- Start with no discs -->
+            </div>
+
+            <div class="col" id="col2">
+                <!-- Start with some discs -->
+                <div class="disc red"></div>
+                <div class="disc black"></div>
+            </div>
+
+            <div class="col" id="col3">
+                <!-- Start with some discs -->
+                <div class="disc red"></div>
+                <div class="disc black"></div>
+                <div class="disc red"></div>
+                <div class="disc black"></div>
+                <div class="disc red"></div>
+                <div class="disc black"></div>
+            </div>
+
+            <div class="col" id="col4">
+                <!-- Start with no discs -->
+            </div>
+
+            <div class="col" id="col5">
+                <!-- Start with no discs -->
+            </div>
+
+            <div class="col" id="col6">
+                <!-- Start with no discs -->
+            </div>
+
+        </section>
+
+    </main>
 
 
 
-
-
-
-
-
-
-
-
-
-
+    <!-- Start scripts -->
     <script src="src/script.js"></script>
 </body>
 
