Added starter code with references to Randys code from the demos. Thank you Randy

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Starter code with help from the code structure in Randy's demos. Thank you, Randy. -->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
