Implmented starter code from Randys demos and example code. Wrote comments and TODOs in JS file. Ready for team meeting to divi up tasks.

--- a/index.html
+++ b/index.html
@@ -18,33 +18,38 @@
         <h1>
             Conect Four Team Project
         </h1>
+        <h3>Team Names Here</h3>
     </header>
 
+    <!-- Main game area -->
     <main id="gameArea">
 
+        <!-- Message output area -->
         <div id="messageArea"></div>
 
+        <!-- Main game-board area -->
         <section id="board">
 
+            <!-- Start columns here -->
             <div class="col" id="col0">
-                <!-- Start with some discs -->
+                <!-- Start col with some discs -->
                 <div class="disc red"></div>
                 <div class="disc black"></div>
                 <div class="disc red"></div>
             </div>
 
             <div class="col" id="col1">
-                <!-- Start with no discs -->
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col2">
-                <!-- Start with some discs -->
+                <!-- Start col with some discs -->
                 <div class="disc red"></div>
                 <div class="disc black"></div>
             </div>
 
             <div class="col" id="col3">
-                <!-- Start with some discs -->
+                <!-- Start col with some discs -->
                 <div class="disc red"></div>
                 <div class="disc black"></div>
                 <div class="disc red"></div>
@@ -54,15 +59,15 @@
             </div>
 
             <div class="col" id="col4">
-                <!-- Start with no discs -->
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col5">
-                <!-- Start with no discs -->
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col6">
-                <!-- Start with no discs -->
+                <!-- Start col with no discs -->
             </div>
 
         </section>
