Added code from Isabella in readme. Added css to gameboard and cols.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <header>
         <h1>
-            Conect Four Team Project
+            Connect Four Team Project
         </h1>
     </header>
 
@@ -28,7 +28,6 @@
 
         <!-- Main game-board area -->
         <section id="board">
-
             <!-- Start columns here -->
             <div class="col" id="col0">
                 <!-- Start col with some discs -->
