Finished css layout for cols, discs, message area, game area. Implemented Isabellas function for displaying game status message to players through the message area in the html.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     <main id="gameArea">
 
         <!-- Message output area -->
-        <div id="messageArea"></div>
+        <div id="messageArea">
+            <p></p>
+        </div>
 
         <!-- Main game-board area -->
         <section id="board">
