Cleared out the discs from the HTML page. Discs will be added dynamically.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
         <section id="board">
             <!-- Start columns here -->
             <div class="col" id="col0">
-                <!-- Start col with some discs -->
-                <div class="disc red"></div>
-                <div class="disc black"></div>
-                <div class="disc red"></div>
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col1">
@@ -43,19 +40,11 @@
             </div>
 
             <div class="col" id="col2">
-                <!-- Start col with some discs -->
-                <div class="disc red"></div>
-                <div class="disc black"></div>
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col3">
-                <!-- Start col with some discs -->
-                <div class="disc red"></div>
-                <div class="disc black"></div>
-                <div class="disc red"></div>
-                <div class="disc black"></div>
-                <div class="disc red"></div>
-                <div class="disc black"></div>
+                <!-- Start col with no discs -->
             </div>
 
             <div class="col" id="col4">
