Added player area to html.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <main id="gameArea">
 
         <!-- Message output area -->
+        <div id="playerArea">
+            <p></p>
+        </div>
         <div id="messageArea">
             <p></p>
         </div>
@@ -60,9 +63,6 @@
             </div>
 
         </section>
-
-        <div id="player1"></div>
-        <div id="player2"></div>
 
     </main>
 
