Adjustments to css for message area.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
     <main id="gameArea">
 
         <!-- Message output area -->
-        <div id="playerArea">
-            <p></p>
-        </div>
-        <div id="messageArea">
-            <p></p>
-        </div>
-
+        <div id="playerArea"></div>
+        <p>
+            <div id="messageArea"></div>
+        </p>
         <!-- Main game-board area -->
         <section id="board">
             <!-- Start columns here -->
